@@ -1,5 +1,15 @@
 2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>
 
+	Corrected search path for signature files when comparing their
+	timestamps in store module.
+	Declared two parameter of store_load_plugin as const.
+
+	* libopenvas/store.c, libopenvas/store.h (store_load_plugin): Made
+	parameters const, corrected search path for .asc (signature) files. Was
+	cache dir, now is same dir as plugin.
+
+2009-04-01  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
 	Corrected checks when loading plugins from cache, extended
 	documentation, removed debug printf.
 
